# mailtrap-python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements.test.txt  requirements.txt  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: main.yml
examples/: sending.py
examples/contacts/: contact_fields.py  contact_imports.py  contact_lists.py  contacts.py
examples/email_templates/: templates.py
examples/suppressions/: suppressions.py
examples/testing/: attachments.py  inboxes.py  messages.py  projects.py
mailtrap/: __init__.py  client.py  config.py  constants.py  email_template.py  exceptions.py  http.py
mailtrap/api/: base.py  contacts.py  projects.py  sending.py  suppressions.py  templates.py  testing.py
mailtrap/api/resources/: attachments.py  contact_fields.py  contact_imports.py  contact_lists.py  contacts.py  inboxes.py  messages.py  projects.py  suppressions.py  templates.py
mailtrap/mail/: __init__.py  address.py  attachment.py  base.py  base_entity.py  from_template.py  mail.py
mailtrap/models/: attachments.py  base.py  common.py  contacts.py  inboxes.py  messages.py  permissions.py  projects.py  suppressions.py  templates.py
mailtrap/models/mail/: __init__.py  address.py  attachment.py  base.py  from_template.py  mail.py
mailtrap/project/: __init__.py  base.py  name.py  project.py
mailtrap/schemas/: base.py  inboxes.py  projects.py
tests/: conftest.py
tests/unit/: test_client.py  test_exceptions.py  test_http.py
tests/unit/api/: test_contact_fields.py  test_contact_lists.py  test_projects.py  test_sending.py
tests/unit/api/contacts/: test_contact_fields.py  test_contact_imports.py  test_contact_lists.py  test_contacts.py
tests/unit/api/email_templates/: test_email_templates.py
tests/unit/api/suppressions/: test_suppressions.py
tests/unit/api/testing/: test_attachments.py  test_inboxes.py  test_messages.py  test_projects.py
tests/unit/mail/: test_address.py  test_attachment.py  test_from_template.py  test_mail.py
tests/unit/models/: test_contacts.py  test_inboxes.py  test_projects.py  test_templates.py
tests/unit/models/mail/: test_address.py  test_attachment.py  test_from_template.py  test_mail.py
