[project]
name = "mailtrap"
version = "2.1.0"
description = "Official mailtrap.io API client"
readme = "README.md"
license = {file = "LICENSE.txt"}
authors = [{name = "Railsware Products Studio LLC", email = "support@mailtrap.io"}]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.26.0",
]

[project.urls]
Homepage = "https://mailtrap.io/"
Documentation = "https://github.com/railsware/mailtrap-python"
Repository = "https://github.com/railsware/mailtrap-python.git"
"API documentation" = "https://api-docs.mailtrap.io/"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
line_length = 90
force_single_line = true

[tool.black]
line-length = 90

[tool.mypy]
strict = true
check_untyped_defs = true
ignore_missing_imports = true
implicit_reexport = true
